custom view issue assynctesseract 2개 실행  issue phone 알고리즘 issue

--- a/Blueberry/app/src/main/res/layout/activity_name_crop.xml
+++ b/Blueberry/app/src/main/res/layout/activity_name_crop.xml
@@ -6,12 +6,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:text="이름 영역을 손으로 색칠하고 언어를 선택해주세요."/>
+
     <ssu.cheesecake.blueberry.camera.NameCropImageView
         android:id="@+id/nameCropImageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-        android:layout_gravity="center"/>
+        android:gravity="center"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <RadioGroup
+            android:id="@+id/languageRadioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/korRadioBtn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="한글"/>
+            <RadioButton
+                android:id="@+id/engRadioBtn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="영어"/>
+        </RadioGroup>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +70,5 @@
             android:layout_weight="1"
             android:text="cancel"/>
     </LinearLayout>
-
-
 
 </LinearLayout>
