--- a/Blueberry/app/src/main/res/layout/activity_name_crop.xml
+++ b/Blueberry/app/src/main/res/layout/activity_name_crop.xml
@@ -23,7 +23,7 @@
         android:layout_weight="5"
         android:gravity="center"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitStart"/>
 
     <LinearLayout
         android:layout_width="match_parent"
