--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -79,7 +79,7 @@
             android:orientation="vertical">
 
 
-            <ssu.cheesecake.blueberry.EditSpinner
+            <ssu.cheesecake.blueberry.util.EditSpinner
                 android:id="@+id/edit_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -108,7 +108,7 @@
 
 
 
-            <ssu.cheesecake.blueberry.EditSpinner
+            <ssu.cheesecake.blueberry.util.EditSpinner
                 android:id="@+id/edit_phone"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -138,7 +138,7 @@
             android:orientation="vertical">
 
 
-            <ssu.cheesecake.blueberry.EditSpinner
+            <ssu.cheesecake.blueberry.util.EditSpinner
                 android:id="@+id/edit_company"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -169,7 +169,7 @@
             android:baselineAligned="true"
             android:orientation="vertical">
 
-            <ssu.cheesecake.blueberry.EditSpinner
+            <ssu.cheesecake.blueberry.util.EditSpinner
                 android:id="@+id/edit_address"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -195,7 +195,7 @@
             android:baselineAligned="true"
             android:orientation="vertical">
 
-            <ssu.cheesecake.blueberry.EditSpinner
+            <ssu.cheesecake.blueberry.util.EditSpinner
                 android:id="@+id/edit_group"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
