webSite 추가, address 보충

--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
-        android:layout_weight="2"
+        android:layout_weight="2.2"
         android:background="@drawable/borderselection"
         android:orientation="vertical">
 
@@ -139,6 +139,32 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:hint="이메일을 입력하고 수정하세요"
+                android:textColorHint="@color/colorWhite"
+                android:textSize="@dimen/recheck1_question1"
+                android:fontFamily="@font/nanumsquare"
+                android:padding="8dp"
+                app:dropDownDrawable="@drawable/picker"
+                app:dropDownDrawableSpacing="15dp"
+                app:dropDownDrawableWidth="25dp"
+                app:dropDownDrawableHeight="25dp"
+                app:dropDownAnimStyle="@style/CustomPopupAnimation"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="true"
+            android:orientation="vertical">
+
+            <ssu.cheesecake.blueberry.util.EditSpinner
+                android:id="@+id/edit_webSite"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:hint="홈페이지 주소를 입력하고 수정하세요"
                 android:textColorHint="@color/colorWhite"
                 android:textSize="@dimen/recheck1_question1"
                 android:fontFamily="@font/nanumsquare"
