--- a/Blueberry/app/src/main/res/layout/list_item.xml
+++ b/Blueberry/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_item_layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="140dp"
     android:layout_gravity="center_horizontal"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="15dp"
@@ -155,11 +155,13 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:scaleType="fitStart"
             />
 
         <LinearLayout
             android:id="@+id/item_text_layout"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -199,12 +201,6 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/item_image_url"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="10dp" />
         </LinearLayout>
 
     </LinearLayout>
