--- a/Blueberry/app/src/main/res/layout/fragment_group.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_group.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -16,10 +17,6 @@
     </GridLayout>
 
 
-
-
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_2"
         android:layout_width="wrap_content"
@@ -31,7 +28,8 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:backgroundTint="#ffffff"
-        android:src="@drawable/icon_add_simple"/>
+        android:src="@drawable/icon_add_simple"
+        app:backgroundTint="@color/colorWhite" />
     <!--        app:backgroundTint="#ffffff"-->
     <!--        app:borderWidth="0.5dp"-->
 
