--- a/Blueberry/app/src/main/res/layout/activity_smartcrop.xml
+++ b/Blueberry/app/src/main/res/layout/activity_smartcrop.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/LayoutStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/cropFrame"
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3">
@@ -20,22 +21,26 @@
     </FrameLayout>
 
     <LinearLayout
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_ok"
-            android:text="OK"
+            style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="OK" />
+
         <Button
             android:id="@+id/btn_cancel"
-            android:text="CANCEL"
+            style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="CANCEL" />
 
     </LinearLayout>
 
