--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/LayoutStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlueBerry1"
+    android:background="@color/colorBlueBerry"
     android:orientation="vertical">
 
     <!-- info -->
 
     <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
+        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
-        android:layout_weight="0.6"
+        android:layout_weight="0.7"
         android:orientation="vertical">
 
         <TextView
+            style="@style/TextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:fontFamily="@font/nanumsquare"
             android:text="@string/recheck2_title"
-            android:textColor="@color/colorWhite"
-            android:textSize="25sp" />
+            android:textColor="@color/colorWhite" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/recheck2_guiding"
-            android:textColor="@color/colorWhite"
-            android:textSize="11sp" />
+<!--        <TextView-->
+<!--            style="@style/TextViewStyle"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:text="@string/recheck2_guiding" />-->
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorWhite" />
+<!--        <View-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="2dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:background="@color/colorWhite" />-->
 
     </LinearLayout>
 
     <!-- Image -->
 
     <LinearLayout
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
+        android:layout_weight="0.9"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
         android:baselineAligned="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="top|center_horizontal"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/business_card"
+            style="@style/ImageViewStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
             android:adjustViewBounds="true"
             android:background="@drawable/borderimage" />
 
@@ -66,215 +70,214 @@
 
     <!-- Spinners -->
 
+    <!--    <LinearLayout-->
+    <!--        style="@style/LayoutStyle"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:layout_margin="20dp"-->
+    <!--        android:layout_weight="2.2"-->
+    <!--        android:background="@drawable/borderselection"-->
+    <!--        android:orientation="vertical" />-->
+
     <LinearLayout
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="20dp"
-        android:layout_weight="2.2"
-        android:background="@drawable/borderselection"
+        android:layout_weight="1"
+        android:baselineAligned="true"
         android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_name"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="이름을 선택한 후 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_name"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="이름을 선택한 후 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_phone"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="휴대전화 번호를 입력하고 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_phone"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="휴대전화 번호를 입력하고 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_email"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="이메일을 입력하고 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_email"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="이메일을 입력하고 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_webSite"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="홈페이지 주소를 입력하고 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_webSite"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="홈페이지 주소를 입력하고 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_company"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="회사 이름을 선택하고 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_company"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="회사 이름을 선택하고 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_address"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
+            android:fontFamily="@font/nanumsquare"
+            android:hint="주소를 입력하고 수정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_address"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="주소를 입력하고 수정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        style="@style/LayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ssu.cheesecake.blueberry.util.EditSpinner
+            android:id="@+id/edit_group"
+            style="@style/SpinnerStyle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:baselineAligned="true"
-            android:orientation="vertical">
-
-            <ssu.cheesecake.blueberry.util.EditSpinner
-                android:id="@+id/edit_group"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:hint="그룹을 지정하세요"
-                android:textColorHint="@color/colorWhite"
-                android:textSize="@dimen/recheck1_question1"
-                android:fontFamily="@font/nanumsquare"
-                android:padding="8dp"
-                app:dropDownDrawable="@drawable/picker"
-                app:dropDownDrawableSpacing="15dp"
-                app:dropDownDrawableWidth="25dp"
-                app:dropDownDrawableHeight="25dp"
-                app:dropDownAnimStyle="@style/CustomPopupAnimation"
-                />
-
-        </LinearLayout>
+            android:fontFamily="@font/nanumsquare"
+            android:hint="그룹을 지정하세요"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
+            app:dropDownAnimStyle="@style/CustomPopupAnimation"
+            app:dropDownDrawable="@drawable/picker"
+            app:dropDownDrawableHeight="25dp"
+            app:dropDownDrawableSpacing="15dp"
+            app:dropDownDrawableWidth="25dp" />
 
     </LinearLayout>
 
     <!-- Button -->
 
     <LinearLayout
+        style="@style/LayoutStyle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/recheck1_margin"
-        android:layout_weight="0.3">
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/finishButton1"
+            style="@style/TextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recheck_next"
             android:textSize="@dimen/recheck1_question1" />
 
     </LinearLayout>
-
 
 </LinearLayout>
