--- a/Blueberry/app/src/main/res/layout/fragment_camera.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_camera.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/LayoutStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,28 +21,30 @@
     <ssu.cheesecake.blueberry.util.AutoFitTextureView
         android:id="@+id/CameraTextureView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
+
     <SurfaceView
+        android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/surfaceView"/>
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_below="@id/CameraTextureView"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_below="@id/CameraTextureView"
         android:background="#FFFFFF"
         android:orientation="vertical">
 
         <TextView
+            style="@style/TextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="명함을 사각형 안에 맞춰서 촬영해 주세요"
-            android:textSize="20dp"
-            android:layout_gravity="center"/>
+            android:textSize="20dp" />
 
 
         <ImageButton
