--- a/Blueberry/app/src/main/res/layout/list_item.xml
+++ b/Blueberry/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_item_layout"
+    style="@style/LayoutStyle"
     android:layout_width="wrap_content"
     android:layout_height="140dp"
     android:layout_gravity="center_horizontal"
@@ -8,6 +9,7 @@
     android:layout_marginTop="15dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="15dp">
+
     <LinearLayout
         android:id="@+id/rowBG"
         android:layout_width="wrap_content"
@@ -40,21 +42,21 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:src="@drawable/icon_favorite"
-                    android:tint="@android:color/white"/>
+                    android:tint="@android:color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="Favorite"
                     android:textColor="@android:color/white"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -80,21 +82,21 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_mode_edit_black_24dp"
-                    android:tint="@android:color/white"/>
+                    android:tint="@android:color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="Edit"
                     android:textColor="@android:color/white"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -119,28 +121,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:tint="@android:color/white"
-                    android:src="@drawable/icon_delete"/>
+                    android:src="@drawable/icon_delete"
+                    android:tint="@android:color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="Delete"
                     android:textColor="@android:color/white"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/rowFG"
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
@@ -150,64 +153,74 @@
         android:orientation="horizontal"
         android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_weight="1"
+        <RelativeLayout
+            style="@style/LayoutStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:scaleType="fitStart"
-            />
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/item_image"
+                style="@style/ImageViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/item_text_layout"
-            android:layout_weight="1"
+            style="@style/LayoutStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/item_en_name"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/item_kr_name"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/item_phone_number"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/item_email"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/item_company"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/item_date"
+                style="@style/TextViewSmallStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
         android:background="#67676767"
-        android:elevation="5dp"/>
+        android:elevation="5dp" />
 </RelativeLayout>
