--- a/Blueberry/app/src/main/res/values/colors.xml
+++ b/Blueberry/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#9377BB</color>
-    <color name="colorBlueBerry1">#9377BB</color>
+    <color name="colorBlueBerry">#9377BB</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorYellow">#FFFF00</color>
 </resources>
