--- a/Blueberry/app/src/main/res/layout/fragment_group_list.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_group_list.xml
@@ -23,6 +23,7 @@
         android:layout_weight="1" />
 
     <RelativeLayout
+        style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
